--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <span>العابي</span>
         </a>
         </a>
-        <a href="About.html" class="nav-item">
+        <a href="about.html" class="nav-item">
             <img src="images/about.png" alt="حول الموقع" class="nav-icon">
             <span>حول</span>
         </a>
