--- a/MyPlay.html
+++ b/MyPlay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التحميل - MCS</title>
+    <title>العاب Smoal</title>
     <link rel="stylesheet" href="MyPlay-style.css">
 </head>
 <body>
